fix: analysis overflow on mobile

--- a/src/app/components/analysis/analysis.component.scss
+++ b/src/app/components/analysis/analysis.component.scss
@@ -4,6 +4,7 @@
   padding: $margin-l;
   flex-grow: 1;
   @include area();
+  overflow: auto;
 }
 
 .line {
